# invite-code-manager

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml  release.yml
.junie/: guidelines.md
migrations/2025-03-14-044938_create_users/: down.sql  up.sql
migrations/2025-03-16-212133_create_sessions/: down.sql  up.sql
src/: agent.rs  cli.rs  config.rs  error.rs  helper.rs  lib.rs  main.rs  schema.rs  state.rs  user.rs
src/apis/: add_admin.rs  create_invite_codes.rs  disable_invite_codes.rs  generate_otp.rs  get_account_email.rs  get_account_emails.rs  get_invite_codes.rs  health.rs  list_admins.rs  login.rs  mod.rs  remove_admin.rs  validate_otp.rs  verify_otp.rs
src/db/: mod.rs
src/routes/: add_admin.rs  create_invite_codes.rs  disable_invite_codes.rs  generate_otp.rs  get_invite_codes.rs  health.rs  list_admins.rs  login.rs  mod.rs  remove_admin.rs  validate_otp.rs  verify_otp.rs
tests/: account_email_test.rs  integration_test.rs
tests/common/: mod.rs
