[package]
name = "InviteCodeManager"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.7"
actix-rt = "2.10.0"
actix-web = "4.8.0"
serde = { version = "1.0.204", features = ["derive"] }
dotenvy = "0.15.7"
actix-session = { version = "0.9.0", features = ["redis-rs-session", "cookie-session"] }
actix-cors = "0.7.0"
diesel = { version = "2.2.2", features = ["sqlite", "r2d2"] }
rand = "0.8.5"
totp-rs = "5.4.0"
base32 = "0.4.0"
serde_json = "1.0.91"
reqwest = { version = "0.12.14", features = ["json"] }
rpassword = "7.4.0"
rust-argon2 = "3.0.0"